--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "fullstack-vue-graphql",
   "version": "1.0.0",
+  "engines": {
+    "node": "^10"
+  },
   "description": "Vue-GraphQL-Apollo",
   "main": "server.js",
   "scripts": {
