--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "client": "cd client && npm run serve",
-    "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\"",
-	"heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\""
   },
   "keywords": [],
   "author": "Sam",
